# C-node-based-data-processing-pipeline

./: CMakeLists.txt  PartA.cpp  PartB.cpp  README.md  tests.cpp
dependencies/nlohmannJson/share/pkgconfig/: nlohmann_json.pc
